@@ -1,5 +1,5 @@
 var utils = require("./utils"),
-    Mapper = require("./mapper"),
+    urlmap = require("./urlmap"),
     Router = require("./router");
 
 module.exports = Builder;
@@ -38,7 +38,7 @@ Builder.prototype.use = function use(middleware) {
         delete this._map;
 
         this._stack.push(function (app) {
-            return makeMapper(app, map);
+            return makeUrlmap(app, map);
         });
     }
 
@@ -50,7 +50,7 @@ Builder.prototype.use = function use(middleware) {
 
 /**
  * Specifies a `location` at which a new Builder should be "mounted" inside this
- * one using a Mapper. The `callback` will be called with the new Builder.
+ * one using a urlmap. The `callback` will be called with the new Builder.
  */
 Builder.prototype.map = function map(location, callback) {
     if (!this._map) {
@@ -92,7 +92,7 @@ Builder.prototype.toApp = function toApp() {
     }
 
     if (this._map) {
-        app = makeMapper(app, this._map);
+        app = makeUrlmap(app, this._map);
     }
 
     var i = this._stack.length;
@@ -113,15 +113,15 @@ function makeRouter(app, routes) {
     return router.toApp();
 }
 
-function makeMapper(app, map) {
-    var mapper = new Mapper(app);
+function makeUrlmap(app, map) {
+    var mapping = {};
 
     var builder;
     for (var location in map) {
-        builder = new Builder(app);
+        builder = new Builder;
         map[location](builder);
-        mapper.map(location, builder.toApp());
+        mapping[location] = builder.toApp();
     }
 
-    return mapper.toApp();
+    return urlmap(mapping, app);
 }
