@@ -298,9 +298,7 @@ util.inherits(InvalidRequestBodyError, StrataError);
 
 var propPaths = {
     // Constructors
-    "BufferedStream": "bufferedstream",
     "Builder": "builder",
-    "Mapper": "mapper",
     "Request": "request",
     "Response": "response",
     "Router": "router",
@@ -311,6 +309,7 @@ var propPaths = {
     "contentLength": "contentlength",
     "contentType": "contenttype",
     "directory": "directory",
+    "flash": "flash",
     "gzip": "gzip",
     "jsonp": "jsonp",
     "lint": "lint",
@@ -318,6 +317,7 @@ var propPaths = {
     "rewrite": "rewrite",
     "sessionCookie": "session/cookie",
     "static": "static",
+    "urlmap": "urlmap",
     // Other
     "manual": "manual",
     "mock": "mock",
