@@ -1,13 +1,12 @@
 var assert = require("assert"),
     vows = require("vows"),
     mock = require("./../lib/mock"),
-    Mapper = require("./../lib/mapper");
+    urlmap = require("./../lib/urlmap");
 
-vows.describe("mapper").addBatch({
-    "A Mapper": {
+vows.describe("urlmap").addBatch({
+    "A urlmap middleware": {
         topic: function () {
-            var app = new Mapper;
-            mock.request("", app, this.callback);
+            mock.request("", urlmap({}), this.callback);
         },
         "should return 404 by default": function (err, status, headers, body) {
             assert.equal(status, 404);
@@ -20,9 +19,9 @@ vows.describe("mapper").addBatch({
                         "X-PathInfo": env.pathInfo,
                         "Content-Type": "text/plain"
                     }, "");
-                }
+                };
 
-                var map = Mapper.fromMap({
+                var map = urlmap({
                     "http://example.org/static": app,
                     "/path": app,
                     "/some/path": app
@@ -174,7 +173,7 @@ vows.describe("mapper").addBatch({
         },
         "with host-based definitions": {
             topic: function () {
-                var map = Mapper.fromMap({
+                var map = urlmap({
                     "/": function (env, callback) {
                         callback(200, {
                             "Content-Type": "text/plain",
@@ -314,11 +313,11 @@ vows.describe("mapper").addBatch({
                 }
             }
         },
-        "with nested Mappers": {
+        "with nested urlmaps": {
             topic: function () {
-                var map = Mapper.fromMap({
-                    "/some": Mapper.fromMap({
-                        "/path": Mapper.fromMap({
+                var map = urlmap({
+                    "/some": urlmap({
+                        "/path": urlmap({
                             "/name": function (env, callback) {
                                 callback(200, {
                                     "Content-Type": "text/plain",
@@ -327,8 +326,8 @@ vows.describe("mapper").addBatch({
                                     "X-PathInfo": env.pathInfo
                                 }, "");
                             }
-                        }).toApp()
-                    }).toApp()
+                        })
+                    })
                 });
 
                 return map;
@@ -361,7 +360,7 @@ vows.describe("mapper").addBatch({
         },
         "with multiple root apps": {
             topic: function () {
-                var map = Mapper.fromMap({
+                var map = urlmap({
                     "/": function (env, callback) {
                         callback(200, {
                             "Content-Type": "text/plain",
