@@ -1,3 +1,7 @@
+= HEAD
+
+  * Added urlmap middleware. Removed Mapper.
+
 = 0.8.2 / 2011-11-21
 
   * Added strata.call to catch errors that are thrown synchronously by strata
